--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
     <h1 >Ntuthuko Yiga
         <img src="IMG-20190502-WA0016-01.jpeg" width="200">
     </h1>
@@ -15,13 +16,14 @@
 <h2>
 Vince City, Italy
 </h2>
-<div class="Container">
+
 <div>
     <img src="download.jpeg" width="200">
-
+<div>
     Vince city is a car-free area in the world, located in italy. Vince city is one of the beautiful cities in the world and it attract tourist from around the globe. Vince is a city of immense beauty and historical significance, but it is also unique and not like any other city in the world. Cannals and gondolas are used as mode of transport in Vince to float around the city and explore endless gorgeous views. Venice is worth visiting because it hosts some of the most important international festivals and a couple of well-known events worldwide.
 </div>
 </div>
+
 
 <h2>Spanish is the language I would like to learn</h2>
 <div>
@@ -52,6 +54,7 @@ Vince City, Italy
 </table>
 
 <h2>Favourite Subjects</h2>
+<div class="Container">
 <div>
     Information Management
 </div>
@@ -70,13 +73,17 @@ Vince City, Italy
 
 <div>
     4IR Bootcamp
+ 
 </div>
 
 <div>
     <img src="4ir.jpg" width="200">
 </div>
+</div>
 
 <h2>Historic Places</h2>
+
+<div class="Container">
 <div>
     <h3>Aparthied Museum
     </h3>
@@ -110,6 +117,7 @@ Vince City, Italy
 
 <div>
     The Nelson Mandela National Museum, commonly referred to as Mandela House, is the house on Vilakazi Street, Orlando West, Soweto, South Africa, where Nelson Mandela lived from 1946 to 1962. It is located at number 8115, at the corner of Vilakazi and Ngakane streets, a short distance up the road from Tutu House, the home of Archbishop Emeritus Desmond Tutu. Mandela donated the house to the Soweto Heritage Trust (of which he was the founder) on 1 September 1997, to be run as a museum. It was declared a National Heritage Site in 1999.
+</div>
 </div>
 </body>
 </html>
