--- a/webpage.html
+++ b/webpage.html
@@ -21,8 +21,7 @@
         <h2>
             Vince City, Italy
         </h2>
-
-        <div class="City">
+        <div class="Describe">
             <img src="download.jpeg" width="200" height="200">
             <p>
                 Vince city is a car-free area in the world, located in italy. Vince city is one of the beautiful <br>
@@ -37,6 +36,11 @@
                 well-known
                 events worldwide.
             </p>
+        </div>
+        
+
+        <!-- <div class="City"> -->
+            
         </div>
    
 
