--- a/webpage.html
+++ b/webpage.html
@@ -12,10 +12,15 @@
 <body>
     <div class="Content">
 
-
-        <div class="Align">
-            <h1>Ntuthuko Yiga </h1>
-            <img src="IMG-20190502-WA0016-01.jpeg" width="300">
+<!-- 
+        <div class="Align"> -->
+            <div class="Align">
+                <h1>Ntuthuko Yiga </h1>
+            </div>
+            <div class="Align">
+                <img src="IMG-20190502-WA0016-01.jpeg" width="300">
+            </div>
+            
         </div>
 
 
